updates parent testimonials

--- a/src/parents.html
+++ b/src/parents.html
@@ -56,37 +56,61 @@
       <p>In addition to the support that we need every parent providing their cadet at home, parents who would like to become more involved, are encouraged to take part in our Parent Auxiliary group. From preparing meals to jumping in as a subject mater expert from time to time, a little help goes a long way.</p>
       <p>Parents who want to go "all in" may choose to become volunteers in our organization. When a parent wants to volunteer, we try to make sure they are not put in a supervisory position over their own cadet and try to keep as much space between them as possible to allow a clear separation between roles at home and roles at Sea Cadet activities. For more information about volunteering, check out our <a href="volunteering.html">Volunteers page</a>.</p>
       <h2>What our parents are saying</h2>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="10000">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              Our son is fortunate to be a cadet of the Atterbury Battalion of the U. S. Navy Sea Cadet Corp. The oportunites that he has received during local drills and during advanced training has helped to grow him into a more self-reliant and accountable young man. We appreciate the dedication and support that is provided by the adult leaders and volunteers. We looked forward to his continued growth.
-              <cite>Scott and Joleen Krueger</cite>
+              <p>Our son is fortunate to be a cadet of the Atterbury Battalion of the U. S. Navy Sea Cadet Corp. The opportunities that he has received during local drills and during advanced training has helped to grow him into a more self-reliant and accountable young man. We appreciate the dedication and support that is provided by the adult leaders and volunteers. We looked forward to his continued growth.</p>
+              <cite>Scott and Joleen Krueger of Elizabethtown, IN</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
+              <p>
               A great group of kids and leaders! The things learned will be instilled in them and used in everyday life,,,,integrity, honor, respect and honesty! These attributes are so important for our young kids to learn! Thank you Atterbury Sea Cadets!!
-              <cite>Jenise Sanders</cite>
+              </p>
+              <cite>Jenise Sanders of New Whiteland, IN</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
+              <p>
               Fantastic group of young men and women who love their country and who work hard to reach their goals. The adult leaders are fantastic and teach the cadets a large variety of skills and life lessons.
-              <cite>Adrian Krebs</cite>
+              </p>
+              <cite>Adrian Krebs of Seymour, IN</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
+              <p>
               This unit rocks! Been involved with Sea Cadets for 7 years now, the last 3 have been with the Atterbury Battalion. Great group of young men and women! Our parent support is fantastic! The best thing about the unit are the adult volunteers...they put so much time, energy and effort to make the drills awesome and meaningful!
-              <cite>Autumn Schildt</cite>
+              </p>
+              <cite>Autumn Schildt of Avon, IN</cite>
             </blockquote>
+          </div>
+          <div class="carousel-item">
+            <blockquote>
+            <p>
+              Our experience with the Camp Atterbury Sea Cadet program was remarkable.  The adult leadership was outstanding.  Our son was at a crossroads at fourteen years old.  He found the Sea Cadet program on his own and wanted to join.  
+            </p>
+            <p>
+              Over the next four years, we drove our son 5 hours round-trip each month for drill.  It was well worth it.  He become deeply invested, found clear direction for his young life.  He experienced SCUBA certification, phenomenal training on discipline as well as being allowed to participate in special warfare training in Panama, Florida and winter survival training in Colorado.  
+            </p>
+            <p>
+              This led to his participation in the Navy ROTC program at Jacksonville, Florida.  He just finished first year of college with 3.98 GPA in mechanical engineering.  He aspires to be Navy Special Warfare officer and pursue becoming a SEAL officer.  I attribute a very real part of these accomplishments, as well as his discipline and direction to the Cadet program and training from LTjg Kyle Burns and other instructors.  
+            </p>
+            <p>
+              Cannot recommend this program strongly enough for ALL young people.
+            </p>
+            <cite>Mike Nunamaker of Huntington, IN</cite>
+            </blockquote>            
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
