adds parent testimonial

--- a/src/parents.html
+++ b/src/parents.html
@@ -63,12 +63,13 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <p>Our son is fortunate to be a cadet of the Atterbury Battalion of the U. S. Navy Sea Cadet Corp. The opportunities that he has received during local drills and during advanced training has helped to grow him into a more self-reliant and accountable young man. We appreciate the dedication and support that is provided by the adult leaders and volunteers. We looked forward to his continued growth.</p>
-              <cite>Scott and Joleen Krueger of Elizabethtown, IN</cite>
+              <p>Our son is fortunate to be a cadet of the Atterbury Battalion of the U. S. Navy Sea Cadet Corps. The opportunities that he has received during local drills and during advanced training has helped to grow him into a more self-reliant and accountable young man. We appreciate the dedication and support that is provided by the adult leaders and volunteers. We looked forward to his continued growth.</p>
+              <cite>Scott and Joleen Krueger of Elizabethtown, Indiana</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
@@ -76,7 +77,7 @@
               <p>
               A great group of kids and leaders! The things learned will be instilled in them and used in everyday life,,,,integrity, honor, respect and honesty! These attributes are so important for our young kids to learn! Thank you Atterbury Sea Cadets!!
               </p>
-              <cite>Jenise Sanders of New Whiteland, IN</cite>
+              <cite>Jenise Sanders of New Whiteland, Indiana</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
@@ -84,7 +85,7 @@
               <p>
               Fantastic group of young men and women who love their country and who work hard to reach their goals. The adult leaders are fantastic and teach the cadets a large variety of skills and life lessons.
               </p>
-              <cite>Adrian Krebs of Seymour, IN</cite>
+              <cite>Adrian Krebs of Seymour, Indiana</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
@@ -92,7 +93,7 @@
               <p>
               This unit rocks! Been involved with Sea Cadets for 7 years now, the last 3 have been with the Atterbury Battalion. Great group of young men and women! Our parent support is fantastic! The best thing about the unit are the adult volunteers...they put so much time, energy and effort to make the drills awesome and meaningful!
               </p>
-              <cite>Autumn Schildt of Avon, IN</cite>
+              <cite>Autumn Schildt of Avon, Indiana</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
@@ -109,8 +110,16 @@
             <p>
               Cannot recommend this program strongly enough for ALL young people.
             </p>
-            <cite>Mike Nunamaker of Huntington, IN</cite>
+            <cite>Mike Nunamaker of Huntington, Indiana</cite>
             </blockquote>            
+          </div>
+          <div class="carousel-item">
+            <blockquote>
+              <p>
+                I can't say enough about how grateful I am for the Atterbury Sea Cadets.  My sons have had wonderful opportunities to experience a wide variety of future job prospects.  We have discussed together how just because they are part of this group, they don't necessarily have to join the military, but by gaining these experiences, they are learning what they are interested in choosing as a future career, or in other cases, what they might not absolutely want to do after high school.  As a single mother, I try to teach them everything I feel young men need to know, but I am only one person.  Sea Cadets have filled in some of the gaps in those areas where I have no expertise.  It has been a wonderful experience for all of us and I wouldn't trade it for anything.
+              </p>
+              <cite>Angela Porter of Pekin, Indiana</cite>
+            </blockquote>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
