updates navigation globally

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/site.css">
+    <script src="https://kit.fontawesome.com/ae6eb3ad7c.js" crossorigin="anonymous"></script>
     <title>Atterbury Sea Cadets and NLCC Training Company Carl Brashear Home</title>
   </head>
   <body>
@@ -30,6 +31,14 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="parents.html">Parents</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programs</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="scuba.html">Scuba</a>
+                  <a class="dropdown-item" href="cert.html">CERT</a>
+                  <a class="dropdown-item" href="indiana-graduation-pathways.html">Graduation Pathways</a>
+              </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="volunteering.html">Volunteers</a>
