--- a/src/parents.html
+++ b/src/parents.html
@@ -31,6 +31,14 @@
           <li class="nav-item">
             <a class="nav-link" href="parents.html">Parents</a>
           </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programs</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="scuba.html">Scuba</a>
+                  <a class="dropdown-item" href="cert.html">CERT</a>
+                  <a class="dropdown-item" href="indiana-graduation-pathways.html">Graduation Pathways</a>
+              </div>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="volunteering.html">Volunteers</a>
           </li>
