adds placeholder text for scuba page

--- a/src/scuba.html
+++ b/src/scuba.html
@@ -50,6 +50,12 @@
             </div>
           </nav>
           <main id="main" role="main">
+              <header class="jumbotron jumbotron-fluid bg-dark text-light hero-container">
+                <div class="container-fluid text-center bg-dark">
+                  <h1>Dive Education Program</h1>
+                  <p class="lead pb-4">Check back soon for more information about our new Dive Education Program starting January 2021!</p>
+                </div>
+              </header>
           </main>
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
