adds target for external link

--- a/src/indiana-graduation-pathways.html
+++ b/src/indiana-graduation-pathways.html
@@ -56,7 +56,7 @@
                   and recognizes that education cannot be "one size fits all". Beginning with the graduating high school 
                   class of 2023, in addition to receiving their high school diploma Indiana students are required to 
                   achieve additional goals in order to graduate high school. This requirement and the supporting program 
-                  is called <a href="https://www.doe.in.gov/graduation-pathways" rel="external">Graduation Pathways</a><i class="fa fa-external-link"></i>.</p>
+                  is called <a href="https://www.doe.in.gov/graduation-pathways" rel="external" target="external">Graduation Pathways</a><i class="fa fa-external-link"></i>.</p>
               <h2>Where Sea Cadets fits in</h2>
               <p>The Graduation Pathways program consists of three high level requirements:
                   <ol>
