--- a/src/parents.html
+++ b/src/parents.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/site.css">
+    <script src="https://kit.fontawesome.com/ae6eb3ad7c.js" crossorigin="anonymous"></script>
     <title>Parent Information - Atterbury Sea Cadets and NLCC Training Company Carl Brashear</title>
   </head>
   <body>
