updates external links on sponsor page

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -59,9 +59,9 @@
       <h2>Ways to help</h2>
       <dl>
         <dt>Amazon Smile</dt>
-        <dd>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html">Amazon Smile</a> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dd>
+        <dd>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html" rel="external" target="external">Amazon Smile</a><i class="fa fa-external-link"></i> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dd>
         <dt>Sponsor an Event</dt>
-        <dd>Occasionally opportunities come up for our unit to conduct an event that would not be possible without outside financial help. In January 2020, the unit was able to visit the <a href="https://silversidesmuseum.org">USS Silversides</a> museum in Muskegon, MI thanks to a generous donation from Allied Wholesale Electrical Supply. Please contact us if you would be interested in sponsoring one-time events</dd>
+        <dd>Occasionally opportunities come up for our unit to conduct an event that would not be possible without outside financial help. In January 2020, the unit was able to visit the <a href="https://silversidesmuseum.org" rel="external" target="external">USS Silversides</a><i class="fa fa-external-link"></i> museum in Muskegon, MI thanks to a generous donation from Allied Wholesale Electrical Supply. Please contact us if you would be interested in sponsoring one-time events</dd>
         <dt>Ongoing Partnership</dt>
         <dd>Our single greatest ongoing expense is currently facilities in which to conduct our monthly drills. We would like to find a partner willing to donate or give a discount access to a location in South Central Indiana that could be our regular drill location.</dd>
         <dd>Another ongoing expense that our organization could use partnership on is help offsetting the per-cadet cost of purchasing and replacing uniforms. Some Sea Cadets have partners who have elected to help by "sponsoring" specific uniform components. For example, there are individuals and organizations who have committed to purchasing boots as new cadets come aboard or taking care of the cost of the Navy Working Uniform that we wear at most drills when a new cadet is recruited. With such an ongoing partnership, we could significantly lower our initial enrollment fees and increase accessibility of our program to more Hoosier families.</dd>
@@ -70,9 +70,9 @@
       </dl>
       <h2>Current partners</h2>
       <dl>
-        <dt>Amvets Post 509 - Columbus, IN</dt>
+        <dt><a href="https://www.facebook.com/Columbus-Amvets-POST-509-Columbus-Indiana-543101752502863" rel="external" target="external">Amvets Post 509</a><i class="fa fa-external-link"></i> - Columbus, IN</dt>
         <dl>Amvets Post 509 sponsored our unit's charter in February 2012</dl>
-        <dt><a href="https://www.diverssupplyindy.com/">Divers Supply Indy</a> - Indianapolis, IN</dt>
+        <dt><a href="https://www.diverssupplyindy.com/" rel="external" target="external">Divers Supply Indy</a><i class="fa fa-external-link"></i> - Indianapolis, IN</dt>
         <dl>For several years running, Divers Supply Indy has supported giving our cadets access to an annual "Try Scuba" event and has supported multiple Open Water certification classes for us. Beginning in January 2021, that partership will deepen, enabling monthly scuba diving opportunities to eligible cadets and the SSI Scuba Rangers program for our League cadets.</dl>
       </dl>
       <section class="container-fluid text-center py-4 mt-4" id="contact">
