--- a/src/scuba.html
+++ b/src/scuba.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="css/site.css">
         <script src="https://kit.fontawesome.com/ae6eb3ad7c.js" crossorigin="anonymous"></script>
-        <title>Dive Education Program - Atterbury Sea Cadets</title>
+        <title>Dive Education Program</title>
     </head>
     <body>
         <div id="skip"><a href="#main">Skip to Main Content</a></div>
