adds images to cert/nscc pages and global favicon

--- a/src/atterbury-battalion-nscc-info.html
+++ b/src/atterbury-battalion-nscc-info.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Learn more about the Atterbury Battalion United States Naval Sea Cadet Corps program for Indiana students age 13 through completion of High School">
     <link rel="canonical" href="http://www.atterburyseacadets.org/atterbury-battalion-nscc-info.html">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/site.css">
@@ -58,6 +75,7 @@
     <main id="main" role="main">
     <h1>Atterbury Battalion USNSCC Cadet Information</h1>
     <h2>Being a Sea Cadet</h2>
+    <img src="img/traveling-wall.jpg" class="rounded float-right" alt="Cadets visiting the Vietnam Traveling Memorial Wall">
     <p>Both of our cadet programs consist of a local unit component and training opportunities with our national program. Local units vary in activities and focus, but each local unit holds at least 40 drill sessions (a "drill session" is approximately 1/2 day of training), meets a standardized requirement for correspondence courses prescribed by the national program, and share standard regulations and standards.</p>
     <p>The senior cadet program exposes its cadets to the full rigors of a military training program. Cadets are required to attend a mandatory two-week recruit training camp. After this requirement is met, cadets are eligible to participate in a variety of advanced training sessions. These sessions serve to expose cadets to seamanship and seagoing subjects. They also focus on developing an appreciation for our country's rich naval history, customs and traditions. </p>
     <p>After enrolling in the program, all Sea Cadets must attend a mandatory two-week recruit training session. These training sessions are taught at the Navy’s Recruit Training Command, at other naval bases or stations and at regional recruit training sites using other military host resources.</p>
