--- a/src/cert.html
+++ b/src/cert.html
@@ -5,6 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="canonical" href="http://www.atterburyseacadets.org/cert.html">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">    
     <meta name="description" content="Learn more about how we are integrating Community Emergency Response Team curriculum into our program to develop a sense of service to community and critical skills">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -57,6 +74,7 @@
     <!-- END COMMON HEADER -->
     <main id="main" role="main">
     <h1>Community Emergency Response Team</h1>
+    <img class="rounded float-right" src="img/ice-rescue.jpg" alt="Cadets conducting ice rescue exercise">
     <blockquote cite="https://www.ready.gov/cert">The Community Emergency Response Team (CERT) program educates volunteers about disaster preparedness for the hazards that may impact their area and trains them in basic disaster response skills, such as fire safety, light search and rescue, team organization, and disaster medical operations. CERT offers a consistent, nationwide approach to volunteer training and organization that professional responders can rely on during disaster situations, allowing them to focus on more complex tasks.</blockquote>
     <p>At Atterbury Battalion, we are currently rebuilding our CERT team and associated curriculum. With Cadets from all around South Central Indiana, we have a unique opportunity to provide multiple communities with young citizens that are willing and ready to be relied upon by professional responders during disaster situations. Through participation in our CERT program, Cadets also gain exposure to and can explore potential career opportunities as a professional responder.</p>
     </main>
