--- a/src/tc-carl-brashear-nlcc-info.html
+++ b/src/tc-carl-brashear-nlcc-info.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Learn more about the TC Carl Brashear United States Navy League Cadet Corps program for Indiana students age 10 through 13">
     <link rel="canonical" href="http://www.atterburyseacadets.org/tc-carl-brashear-nlcc-info.html">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/site.css">
@@ -67,7 +84,7 @@
     <p>Our local unit typically meets for a full weekend each month at locations around South Central Indiana. In addition to these drill sessions, we occasionally support community events with an emphasis on anything supporting veteran causes.</p>
     <p>Beginning in January 2021, we are adding additional opportunities for cadets who want to pursue a deep focus on scuba diving. This path will be eligible to cadets who have advanced in the program far enough to become eligible and feature a monthly opportunity to get into the water outside of normal drill time.</p>
     <h2>United States Navy Master Diver Carl Brashear</h2>
-    <img style="float:right" src="img/master-diver-carl-brashear.jpg" alt="United States Navy Master Diver Carl Brashear" />
+    <img class="rounded float-right" src="img/master-diver-carl-brashear.jpg" alt="United States Navy Master Diver Carl Brashear" />
     <p>If you don't know the story of Navy Master Diver Carl Brashear, it is an amazing story of perseverance and was the subject of the 2000 movie "Men of Honor". Faced with hurdles such as racism, illiteracy, poverty, physical disability, and substance abuse; Carl would not accept "you can't". He became the first African American to complete the United States Navy Dive School in support of his goal of becoming a Master Diver. He lost a leg in a diving accident and successfully fought to return to active diving status and eventually earned the Master Diver rating. <a href="http://www.carlbrashear.org">The Carl Brashear Foundation</a> honors his legacy by giving back to society with a special focus on veterans, the afflicted, and youth.</p>
     <p>Given our unit's focus on diving and public safety, there is no better example of the application of Navy Core Values and the characteristics of Faith, Strength, Humility, and Dedication that we strive to instill in our cadets. In June 2021, we are named our NLCC unit which previously did not have its own name Training Company Carl Brashear of the United States Navy League Cadet Corps. CWO4 Phillip Brashear, son of Master Diver Carl Brashear and President of The Carl Brashear Foundation, has given his permission for the unit to bear his father's name and to consider him and his foundation to be an advocate for us. Bearing Master Diver Brashear's name is a huge responsibility to live up to the ideals that he showed our cadets and volunteers are committed to meet the challenge.</p>
     <p>Please watch our website and The Carl Brashear Foundation's website for important announcements about how our organizations are working together to advance our shared causes.</p>
