Adds press release page and associated nav elements

--- a/src/press.html
+++ b/src/press.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Learn more about how our program helps cadets meet Indiana's High School graduation requirements">
-        <link rel="canonical" href="http://www.atterburyseacadets.org/indiana-graduation-pathways.html">
+        <meta name="description" content="Information for media outlets about our program">
+        <link rel="canonical" href="http://www.atterburyseacadets.org/press.html">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="css/site.css">
         <script src="https://kit.fontawesome.com/ae6eb3ad7c.js" crossorigin="anonymous"></script>
-        <title>Graduation Pathways</title>
+        <title>Media Releases</title>
     </head>
     <body>
         <div id="skip"><a href="#main">Skip to Main Content</a></div>
@@ -72,27 +72,19 @@
             </div>
           </nav>
           <main id="main" role="main">
-              <h1>Putting Indiana Students on a Path to Success</h1>
-              <h2>Graduation Pathways Overview</h2>
-              <p>The Indiana Department of Education embraces the principal that not all learning happens in a classroom 
-                  and recognizes that education cannot be "one size fits all". Beginning with the graduating high school 
-                  class of 2023, in addition to receiving their high school diploma Indiana students are required to 
-                  achieve additional goals in order to graduate high school. This requirement and the supporting program 
-                  is called <a href="https://www.doe.in.gov/graduation-pathways" rel="external" target="external">Graduation Pathways</a><i class="fa fa-external-link"></i>.</p>
-              <h2>Where Sea Cadets fits in</h2>
-              <p>The Graduation Pathways program consists of three high level requirements:
-                  <ol>
-                    <li>High School Diploma</li>
-                    <li>Learn and Demonstrate Employability Skills</li>
-                    <li>Postsecondary Ready Competencies</li>
-                  </ol>
-                 Participation in programs such as the United States Naval Sea Cadet Corps fits squarely in the Service-Based Learning Experience 
-                 category to fulfill the Employability Skills requirement. Through participation in our program, students log a minimum of 160
-                 contact hours per year with their local unit in addition to spending a minimum of five days per year at residential training
-                 programs focused on a variety of occupational focus areas. When it comes time to start preparations for graduation, we will
-                 provide a comprehensive training record which can be included as the student's "work product" to document their participation
-                 in the program.
-              </p>
+            <h1>Media Releases</h1>
+              <article>
+                <header>
+                  <h2>Atterbury Sea Cadets Sets the Date for its Next Public Outreach and Recruiting Event for September 26, 2020</h2>
+                  <p role="doc-subtitle">The event will be held at the Mill Race Park, located Columbus, Indiana</p>
+                </header>
+                <p>September 16, 2020 - Atterbury Sea Cadets - the year-round, non-profit educational program that is dedicated to offering compelling, life-changing programs for America's youth - is proud to announce that it has set the date for its upcoming public outreach and recruiting event for September 26, 2020. Taking place at Mill Race Park in Columbus, Indiana, it's an exceptional opportunity for people to learn more about the Corps' passionate, all-volunteer force and for interested parties to sign up to become a part of a program that will undoubtedly change their lives in more ways than one.</p>
+                <p>From the moment it was originally founded until now, the core mission of the Sea Cadet program has remained the same. It aims to provide a significant value to the cadets it serves by offering not only unique training opportunities, but also by stressing the value of community service, by encouraging physical fitness, and by giving access to accelerated promotion opportunities for those cadets who go on to enlist in one of the United States' military branches. These life-changing programs for America's youth instill the values of teamwork, discipline, camaraderie and service - all through a passionate, all-volunteer force that is closely partnered with both the United States Navy and Coast Guard.</p>
+                <p>The Naval Sea Cadet Corps program is intended for young people ages 13 through the completion of high school, and it has been making history since the first unit of Sea Cadets was formed in 1959. That original class was comprised of 78 young men from around the country and the NSCC has only gotten stronger from there. The Navy League Cadet Corps is modeled after the NSCC but tailored appropriately for young people ages 10 through 13.</p>
+                <p>Those who may be interested in joining should know that local units of the Sea Cadet program are required to complete a minimum of 160 contact hours per year. Older students are required to attend at least one residential training program per year, which themselves range in duration from five to 14 days. Those residential training programs provide an exceptional opportunity to focus on the various vocation that exist in today's Department of Defense, while the local unit has adopted a strong emphasis on essential topics like diving and public safety.</p>
+                <p>It's equally important to note that participation in the Sea Cadet program can be used as a Service-Based Learning Experience to satisfy the Employability Skills requirement of Indiana's own Graduation Pathways requirement.</p>
+                <p>Those interested in visiting the upcoming September 26, 2020 event at Mill Race Park in Columbus, Indiana, or those interested in learning more about the important mission and work that the United States Naval Sea Cadet Corps is completing on a daily basis, are encouraged to do so by visiting their official website at <a href="http://www.atterburyseacadets.org">http://www.atterburyseacadets.org</a>. The group can also be found on Facebook by visiting <a rel="external" href="http://www.facebook.com/atterburyseacadets">http://www.facebook.com/atterburyseacadets</a>.</p>
+              </article>
           </main>
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
