--- a/src/volunteering.html
+++ b/src/volunteering.html
@@ -49,6 +49,9 @@
             <a class="nav-link" href="sponsors.html">Sponsors</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="press.html">Media</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
         </ul>
