adds anchor for links directly to specific media release content

--- a/src/press.html
+++ b/src/press.html
@@ -73,7 +73,7 @@
           </nav>
           <main id="main" role="main">
             <h1>Media Releases</h1>
-              <article>
+              <article id="20200916-public-outreach-event">
                 <header>
                   <h2>Atterbury Sea Cadets Sets the Date for its Next Public Outreach and Recruiting Event for September 26, 2020</h2>
                   <p role="doc-subtitle">The event will be held at the Mill Race Park, located Columbus, Indiana</p>
